# hpc

./: .gitignore  README.md
hough_transform/: CMakeLists.txt  hough_transform.c  main.cpp
hough_transform/calculations/: performance.mpi.txt  performance.omp.txt  performance.py  performance.txt  run.sh  times.mpi.txt  times.omp.txt  times.py  times.txt
hough_transform/canny/: CMakeLists.txt  canny_edges.cpp  canny_generate_inputs.cpp
hough_transform/mpi/: mpi.c  mpi.edges.sh  mpi.sh  mpi.theta.sh
hough_transform/mpi_out_edges/: mpi.o.16x160000x16  mpi.o.16x16x160000x16  mpi.o.16x16x20000x16  mpi.o.16x16x320000x16  mpi.o.16x16x40000x16  mpi.o.16x16x80000x16  mpi.o.16x1x160000x16  mpi.o.16x1x20000x16  mpi.o.16x1x320000x16  mpi.o.16x1x40000x16  mpi.o.16x1x80000x16  mpi.o.16x20000x16  mpi.o.16x2x160000x16  mpi.o.16x2x20000x16  mpi.o.16x2x320000x16  mpi.o.16x2x40000x16  mpi.o.16x2x80000x16  mpi.o.16x320000x16  mpi.o.16x40000x16  mpi.o.16x4x160000x16  mpi.o.16x4x20000x16  mpi.o.16x4x320000x16  mpi.o.16x4x40000x16  mpi.o.16x4x80000x16  mpi.o.16x80000x16  mpi.o.16x8x160000x16  mpi.o.16x8x20000x16  mpi.o.16x8x320000x16  mpi.o.16x8x40000x16  mpi.o.16x8x80000x16  mpi.o.1x160000x16  mpi.o.1x16x160000x16  mpi.o.1x16x20000x16  mpi.o.1x16x320000x16  mpi.o.1x16x40000x16  mpi.o.1x16x80000x16  mpi.o.1x1x160000x16  mpi.o.1x1x20000x16  mpi.o.1x1x320000x16  mpi.o.1x1x40000x16  (+107 more)
hough_transform/mpi_out_theta/: mpi.o.16x16x320000x1  mpi.o.16x16x320000x2  mpi.o.16x16x320000x4  mpi.o.16x16x320000x8  mpi.o.16x1x320000x1  mpi.o.16x1x320000x16  mpi.o.16x1x320000x2  mpi.o.16x1x320000x4  (+138 more)
(+315 files in other folders)
